--- a/views/products.ejs
+++ b/views/products.ejs
@@ -2,7 +2,7 @@
 
 <body>
     <div class="topnav">
-        <a class="active" href="#">Movies Site</a>
+        <center><a class="active" href="#">Watch Site</a></center>
         <div class="search-container">
             <form role="search" id="form">
                 <input type="search" id="query" name="q" placeholder="Search..">
@@ -24,7 +24,7 @@
         </div>
         <div class="col-sm-3">
             <div class="card" style="width: 18rem;">
-              <img src="images/gold watch.jpg" class="card-img-top" alt="...">
+              <img src="images/gold watch.jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title" name="movie-name" value="GOLD WATCH">GOLD WATCH</h5>
                 <p class="card-text" name="movie-price" value="7">PRICE:Rs.3900/-</p>
