--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,7 +34,12 @@ nav ul li {
     display: inline;
     margin-right: 20px;
 }
-
+.productlink{
+    background-color:#333;
+    color: white;
+    font-weight: bold;
+    border: none;
+}
 nav a {
     color: #fff;
     text-decoration: none;
