--- a/views/form.ejs
+++ b/views/form.ejs
@@ -4,19 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        form {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 400px;
+        }
+        label {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 8px;
+            color: #333;
+        }
+        input[type="text"] {
+            width:90%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 16px;
+        }
+        button {
+            width: 95%;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
     <form action="/ordered" method="post">
-        <label for="">name</label>
-        <input type="text" name="name"><br><br>
-        <label for="">age</label>
-        <input type="text" name="age"><br><br>
-        <label for="">gender</label>
-        <input type="text" name="gender"><br><br>
-        <label for="">mail</label>
-        <input type="text" name="mail"><br><br>
-
-        <button type="submit" name="btn" value="<%=  itemName  %>">submit</button>
+        <label for="">Name</label>
+        <input type="text" name="name"><br>
+        
+        <label for="">Age</label>
+        <input type="text" name="age"><br>
+        
+        <label for="">Gender</label>
+        <input type="text" name="gender"><br>
+        
+        <label for="">Mail</label>
+        <input type="text" name="mail"><br>
+        
+        <button type="submit" name="btn" value="<%=  itemName  %>">Submit</button>
     </form>
 </body>
 </html>
